Switch to CRXJS
Designed the pop up on figma.

Tried to install Gsap library to handle animations for the design. Plasmo project was not working after installation of gsap, despite starting a new project from scratch. Decided to move to CRXJS to create the extension.

Also created bulb.tsx with svg.

--- a/focus-mode/package.json
+++ b/focus-mode/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "yt-focus-mode",
-  "displayName": "Yt focus mode",
+  "name": "focus-mode",
+  "displayName": "Focus mode",
   "version": "0.0.1",
-  "description": "An extension for youtube.com that blocks irrelavant reccomendations on the basis of keywords when focus mode is active.",
+  "description": "Keyword based focusMode.",
   "author": "Aadil Sengupta",
   "scripts": {
     "dev": "plasmo dev",
@@ -10,7 +10,6 @@
     "package": "plasmo package"
   },
   "dependencies": {
-    "gsap": "^3.13.0",
     "plasmo": "0.90.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
